Done with correcting the api
